# pm_encoder

./: .gitignore  .pm_encoder_config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLUGIN_GUIDE.md  README.md  SYSTEM_INSTRUCTIONS.md  TODO.md  TUTORIAL.md  context_script.sh  pm_encoder.py  prompt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml  voyager-release.yml
.voyager-milestones/: PHASE1B_COMPLETE.md
bridges/wasm/: README.md  index.js  package.json  planetarium_demo.js
docs/: BLUEPRINT.md  CONVERGENCE_VALIDATION.md  EVOLUTION_ROADMAP.md  KNOWLEDGE_BASE.md  RUST_GROWTH_STRATEGY.md  STRATEGIC_VISION_2026.md  THE_TWINS_ARCHITECTURE.md  VSCODE_EXTENSION_SPEC.md
docs/arch/: VOYAGER_AST_CONTRACT.md
docs/planning/: PHASE1B_CORE_FLEET.md
docs/releases/: v1.7.0.md
docs/research/: COACHING_PROTOCOL.md
docs/specs/: VOYAGER_AST_PRD.md  v2.0_FRACTAL_PROTOCOL_SPEC.md
docs/vision/: FRACTAL_V3_LSP_BRIDGE.md
experiments/lsp_poc/: Cargo.toml  comparison_results.csv  run_experiment.sh
experiments/lsp_poc/src/: client.rs  comparison.rs  lib.rs  protocol.rs
experiments/lsp_poc/tests/: initialization.rs
pm_coach/: __init__.py  cli.py  runner.py  source.py
research/: README.md
rust/: Cargo.toml  test_wasm.mjs  test_wasm_full.mjs
scripts/: generate_budget_vectors.py  validate_vectors.py
test_vectors/: README.md  basic_serialization.json  budget_01_drop.json  budget_02_hybrid.json  budget_03_lens_priority.json  claude_xml_serialization.json  python_analyzer.json
tests/: test_comprehensive.py  test_pm_encoder.py
(+110 files in other folders)
